force.com/CALM/src/objects/LG_Monthly_Summary__c.object
<CustomObject>
    <description>Monthly summary for all line graphs</description>
    <fields>
        <fullName>Month__c</fullName>
        <defaultValue>DATE(YEAR(TODAY()), MONTH(TODAY()), 1)</defaultValue>
        <description>The first day of the month that this record is for.</description>
        <label>Month</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Sessions__c</fullName>
        <defaultValue>-1</defaultValue>
        <description>Total number of new sessions this month</description>
        <label>New Sessions</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Users__c</fullName>
        <defaultValue>-1</defaultValue>
        <description>Number of new users this month.</description>
        <label>New Users</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Returning_Sessions__c</fullName>
        <defaultValue>-1</defaultValue>
        <description>Number of returning sessions this month.</description>
        <label>Returning Sessions</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Returning_Users__c</fullName>
        <defaultValue>-1</defaultValue>
        <description>Number of returning users this month.</description>
        <label>Returning Users</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sessions__c</fullName>
        <formula>IF(AND(New_Sessions__c  = -1, Returning_Sessions__c = -1), -1, IF(New_Sessions__c  = -1, 0, New_Sessions__c) + IF(Returning_Sessions__c = -1, 0, Returning_Sessions__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sessions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Users__c</fullName>
        <formula>IF(AND(New_Users__c = -1, Returning_Users__c = -1), -1, IF(New_Users__c = -1, 0, New_Users__c) + IF(Returning_Users__c = -1, 0, Returning_Users__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Users</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>au__c</fullName>
        <label>Application Key</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>LG Monthly Summary</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>LG Monthly Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LG Monthly Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>